--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,12 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "About"
-      href: about.html
+    - text: "Others"
+      href: others.html
+    - text: "CV"
+      href: cv_culquichicon_tex_3.pdf
+    - icon: fa fa-github
+      href: https://github.com/culquichicon
+    
+    
 output: distill::distill_article
